# serializer version: 1
# name: TestModemDataParsing.test_full_payload_snapshot
  list([
    dict({
      'active_sim': 1,
      'auto_2g_bands': False,
      'auto_3g_bands': False,
      'auto_5g_mode': False,
      'band': '5G N78',
      'baudrate': 115200,
      'builtin': True,
      'busy_state': 'Idle',
      'busy_state_id': 1,
      'ca_signal': list([
        dict({
          'band': 'LTE B1',
          'bandwidth': '20',
          'frequency': 100,
          'pcid': 323,
          'primary': True,
          'rsrp': -87,
          'rsrq': -9,
          'sinr': 12,
        }),
        dict({
          'band': 'LTE B7',
          'bandwidth': '20',
          'frequency': 2850,
          'pcid': 364,
          'primary': False,
          'rsrp': -103,
          'rsrq': -13,
          'sinr': 3,
        }),
        dict({
          'band': 'LTE B20',
          'bandwidth': '10',
          'frequency': 6300,
          'pcid': 39,
          'primary': False,
          'rsrp': -83,
          'rsrq': -13,
          'sinr': 0,
        }),
        dict({
          'band': '5G N78',
          'bandwidth': '80',
          'frequency': 631968,
          'primary': False,
        }),
      ]),
      'cell_info': list([
        dict({
          'bandwidth': '20',
          'cellid': '987654',
          'earfcn': 111,
          'mcc': '262',
          'mnc': '02',
          'pcid': 323,
          'sinr': 12,
          'tac': '65432',
          'ue_state': 3,
        }),
        dict({
          'bandwidth': '80',
          'cellid': '987654',
          'mcc': '262',
          'mnc': '02',
          'nr-arfcn': 654321,
          'pcid': 220,
          'rsrp': -103,
          'rsrq': -12,
          'sinr': 3,
          'ue_state': 3,
        }),
      ]),
      'cellid': '987654',
      'cfg_version': '04.202.04.202',
      'conntype': '5G (NSA)',
      'csd': False,
      'data_conn_state': 'Connected',
      'data_conn_state_id': 1,
      'data_off': False,
      'dynamic_mtu': True,
      'framed_routing': True,
      'iccid': '12345678901234567890',
      'id': '2-1',
      'imei': '123456789012345',
      'imsi': '123456789012345',
      'ipv6': True,
      'is_busy': 0,
      'low_signal_reconnect': True,
      'manufacturer': 'Quectel',
      'mobile_dfota': False,
      'mobile_stage': 19,
      'mode': 0,
      'model': 'RG501Q-EU',
      'modem_state_id': 1,
      'multi_apn': True,
      'name': 'Internal modem',
      'netstate': 'Registered, home',
      'netstate_id': 1,
      'no_ussd': False,
      'nr5g_sa_disabled': False,
      'ntype': '5G-NSA',
      'oper': 'test-operator.de',
      'operator': 'test-operator.de',
      'operator_state': 'Registered, home',
      'operator_state_id': 1,
      'operators_scan': True,
      'pinleft': 3,
      'pinstate': 'Inserted',
      'pinstate_id': 1,
      'primary': True,
      'pukleft': 10,
      'rsrp': -86,
      'rsrq': -7,
      'rssi': -58,
      'rxbytes': 427791751874,
      'sc_band_av': 'Active',
      'serial': 'XXXYY12345678',
      'service_modes': dict({
        '3G': list([
          'wcdma_850',
          'wcdma_900',
          'wcdma_2100',
        ]),
        '4G': list([
          'lte_b1',
          'lte_b3',
          'lte_b5',
          'lte_b7',
          'lte_b8',
          'lte_b20',
          'lte_b28',
          'lte_b32',
          'lte_b38',
          'lte_b40',
          'lte_b41',
          'lte_b42',
          'lte_b43',
        ]),
        '5G_NSA': list([
          'nsa_5g_n1',
          'nsa_5g_n3',
          'nsa_5g_n5',
          'nsa_5g_n7',
          'nsa_5g_n8',
          'nsa_5g_n20',
          'nsa_5g_n28',
          'nsa_5g_n38',
          'nsa_5g_n40',
          'nsa_5g_n41',
          'nsa_5g_n77',
          'nsa_5g_n78',
        ]),
        '5G_SA': list([
          '5g_n1',
          '5g_n3',
          '5g_n5',
          '5g_n7',
          '5g_n8',
          '5g_n20',
          '5g_n28',
          '5g_n38',
          '5g_n40',
          '5g_n41',
          '5g_n77',
          '5g_n78',
        ]),
      }),
      'signal': -58,
      'sim_count': 2,
      'sim_switch_enabled': False,
      'simstate': 'Inserted',
      'simstate_id': 0,
      'sinr': 13,
      'state': 'Connected',
      'state_id': 1,
      'tac': '65432',
      'temperature': 45,
      'txbytes': 210590303696,
      'version': 'RG501QEUAAR12A11M4G',
      'volte': False,
      'volte_supported': True,
      'wwan_gnss_conflict': False,
    }),
  ])
# ---
# name: TestModemsClient.test_get_status_parses_fixture
  dict({
    'active_sim': 1,
    'auto_2g_bands': False,
    'auto_3g_bands': False,
    'auto_5g_mode': False,
    'band': '5G N78',
    'baudrate': 115200,
    'builtin': True,
    'busy_state': 'Idle',
    'busy_state_id': 1,
    'ca_signal': list([
      dict({
        'band': 'LTE B1',
        'bandwidth': '20',
        'frequency': 100,
        'pcid': 323,
        'primary': True,
        'rsrp': -87,
        'rsrq': -9,
        'sinr': 12,
      }),
      dict({
        'band': 'LTE B7',
        'bandwidth': '20',
        'frequency': 2850,
        'pcid': 364,
        'primary': False,
        'rsrp': -103,
        'rsrq': -13,
        'sinr': 3,
      }),
      dict({
        'band': 'LTE B20',
        'bandwidth': '10',
        'frequency': 6300,
        'pcid': 39,
        'primary': False,
        'rsrp': -83,
        'rsrq': -13,
        'sinr': 0,
      }),
      dict({
        'band': '5G N78',
        'bandwidth': '80',
        'frequency': 631968,
        'primary': False,
      }),
    ]),
    'cell_info': list([
      dict({
        'bandwidth': '20',
        'cellid': '987654',
        'earfcn': 111,
        'mcc': '262',
        'mnc': '02',
        'pcid': 323,
        'sinr': 12,
        'tac': '65432',
        'ue_state': 3,
      }),
      dict({
        'bandwidth': '80',
        'cellid': '987654',
        'mcc': '262',
        'mnc': '02',
        'nr-arfcn': 654321,
        'pcid': 220,
        'rsrp': -103,
        'rsrq': -12,
        'sinr': 3,
        'ue_state': 3,
      }),
    ]),
    'cellid': '987654',
    'cfg_version': '04.202.04.202',
    'conntype': '5G (NSA)',
    'csd': False,
    'data_conn_state': 'Connected',
    'data_conn_state_id': 1,
    'data_off': False,
    'dynamic_mtu': True,
    'framed_routing': True,
    'iccid': '12345678901234567890',
    'id': '2-1',
    'imei': '123456789012345',
    'imsi': '123456789012345',
    'ipv6': True,
    'is_busy': 0,
    'low_signal_reconnect': True,
    'manufacturer': 'Quectel',
    'mobile_dfota': False,
    'mobile_stage': 19,
    'mode': 0,
    'model': 'RG501Q-EU',
    'modem_state_id': 1,
    'multi_apn': True,
    'name': 'Internal modem',
    'netstate': 'Registered, home',
    'netstate_id': 1,
    'no_ussd': False,
    'nr5g_sa_disabled': False,
    'ntype': '5G-NSA',
    'oper': 'test-operator.de',
    'operator': 'test-operator.de',
    'operator_state': 'Registered, home',
    'operator_state_id': 1,
    'operators_scan': True,
    'pinleft': 3,
    'pinstate': 'Inserted',
    'pinstate_id': 1,
    'primary': True,
    'pukleft': 10,
    'rsrp': -86,
    'rsrq': -7,
    'rssi': -58,
    'rxbytes': 427791751874,
    'sc_band_av': 'Active',
    'serial': 'XXXYY12345678',
    'service_modes': dict({
      '3G': list([
        'wcdma_850',
        'wcdma_900',
        'wcdma_2100',
      ]),
      '4G': list([
        'lte_b1',
        'lte_b3',
        'lte_b5',
        'lte_b7',
        'lte_b8',
        'lte_b20',
        'lte_b28',
        'lte_b32',
        'lte_b38',
        'lte_b40',
        'lte_b41',
        'lte_b42',
        'lte_b43',
      ]),
      '5G_NSA': list([
        'nsa_5g_n1',
        'nsa_5g_n3',
        'nsa_5g_n5',
        'nsa_5g_n7',
        'nsa_5g_n8',
        'nsa_5g_n20',
        'nsa_5g_n28',
        'nsa_5g_n38',
        'nsa_5g_n40',
        'nsa_5g_n41',
        'nsa_5g_n77',
        'nsa_5g_n78',
      ]),
      '5G_SA': list([
        '5g_n1',
        '5g_n3',
        '5g_n5',
        '5g_n7',
        '5g_n8',
        '5g_n20',
        '5g_n28',
        '5g_n38',
        '5g_n40',
        '5g_n41',
        '5g_n77',
        '5g_n78',
      ]),
    }),
    'signal': -58,
    'sim_count': 2,
    'sim_switch_enabled': False,
    'simstate': 'Inserted',
    'simstate_id': 0,
    'sinr': 13,
    'state': 'Connected',
    'state_id': 1,
    'tac': '65432',
    'temperature': 45,
    'txbytes': 210590303696,
    'version': 'RG501QEUAAR12A11M4G',
    'volte': False,
    'volte_supported': True,
    'wwan_gnss_conflict': False,
  })
# ---
